--- a/src/App.css
+++ b/src/App.css
@@ -229,6 +229,11 @@ a {
   background-color: var(--color-secundary);
 }
 
+.prices{
+  color: black;
+  font-size: 1.2rem;
+}
+
 
 
 /* ...................................................................... */
